--- a/HappyHouse/Views/HouseNumber/DeleteHouseNumber.cshtml
+++ b/HappyHouse/Views/HouseNumber/DeleteHouseNumber.cshtml
@@ -1,71 +1,41 @@
-﻿@model HappyHouse.Models.HouseDto
+﻿@model HappyHouse.Models.HouseNumberDto
 
 @{
-    ViewData["Title"] = "DeleteHouse";
+    ViewData["Title"] = "DeleteHouseNumber";
 }
 
 <h1>DeleteHouse</h1>
 
 <h3>Are you sure you want to delete this?</h3>
 <div>
-    <h4>HouseDto</h4>
+    <h4>HouseNumberDto</h4>
     <hr />
 
     <dl class="row">
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.HouseNo)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Id)
+            @Html.DisplayFor(model => model.HouseNo)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+            @Html.DisplayNameFor(model => model.HouseId)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Name)
+            @Html.DisplayFor(model => model.HouseId)
         </dd>
         <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Details)
+            @Html.DisplayNameFor(model => model.SpecialDetails)
         </dt>
         <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Details)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Rate)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Rate)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Occupancy)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Occupancy)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Sqft)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Sqft)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.ImageUrl)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.ImageUrl)
-        </dd>
-        <dt class="col-sm-2">
-            @Html.DisplayNameFor(model => model.Amenity)
-        </dt>
-        <dd class="col-sm-10">
-            @Html.DisplayFor(model => model.Amenity)
+            @Html.DisplayFor(model => model.SpecialDetails)
         </dd>
     </dl>
 
-    <form asp-action="Deletehouse" method="post">
-        <input asp-for="Id" type="hidden"/>
+    <form asp-action="DeletehouseNumber" method="post">
+        <input asp-for="HouseNo" type="hidden"/>
 
         <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="IndexView">Back to List</a>
+        <a asp-action="IndexHouseNumber">Back to List</a>
     </form>
 </div>
