--- a/HappyHouse/Views/HouseNumber/UpdateHouseNumber.cshtml
+++ b/HappyHouse/Views/HouseNumber/UpdateHouseNumber.cshtml
@@ -1,72 +1,33 @@
-﻿@model HappyHouse.Models.HouseUpdateDto
+﻿@model HappyHouse.Models.HouseNumberUpdateDto
 
-<form asp-action="Update">
+<form asp-action="UpdateHouseNumber">
     <br />
     <div class="container border p-3">
-        <h1 class="text-primary">Update House</h1>
+        <h1 class="text-primary">Update HouseNumber</h1>
         <hr />
 
-        <input hidden asp-for="Id" />
+        <input hidden asp-for="HouseNo" />
         <div class="row">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
             <div class="col-2">
-                <label asp-for="Name" class="control-label pt-2" style="font-size:20px;"></label>
+                <label asp-for="HouseId" class="control-label pt-2" style="font-size:20px;"></label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
+                <input asp-for="HouseId" class="form-control" />
+                <span asp-validation-for="HouseId" class="text-danger"></span>
             </div>
 
             <div class="col-2">
-                <label asp-for="Rate" class="control-label pt-2" style="font-size:20px;"></label>
+                <label asp-for="SpecialDetails" class="control-label pt-2" style="font-size:20px;"></label>
             </div>
             <div class="col-10 pb-3">
-                <input asp-for="Rate" class="form-control" />
-                <span asp-validation-for="Rate" class="text-danger"></span>
+                <input asp-for="SpecialDetails" class="form-control" />
+                <span asp-validation-for="SpecialDetails" class="text-danger"></span>
             </div>
 
-            <div class="col-2">
-                <label asp-for="Details" class="control-label pt-2" style="font-size:20px;"></label>
-            </div>
-            <div class="col-10 pb-3">
-                <textarea asp-for="Details" class="form-control" rows="3"></textarea>
-                <span asp-validation-for="Details" class="text-danger"></span>
-            </div>
-
-            <div class="col-2">
-                <label asp-for="ImageUrl" class="control-label pt-2" style="font-size:20px;"></label>
-            </div>
-            <div class="col-10 pb-3">
-                <input asp-for="ImageUrl" class="form-control" />
-                <span asp-validation-for="ImageUrl" class="text-danger"></span>
-            </div>
-
-            <div class="col-2">
-                <label asp-for="Occupancy" class="control-label pt-2" style="font-size:20px;"></label>
-            </div>
-            <div class="col-10 pb-3">
-                <input asp-for="Occupancy" class="form-control" />
-                <span asp-validation-for="Occupancy" class="text-danger"></span>
-            </div>
-
-            <div class="col-2">
-                <label asp-for="Sqft" class="control-label pt-2" style="font-size:20px;"></label>
-            </div>
-            <div class="col-10 pb-3">
-                <input asp-for="Sqft" class="form-control" />
-                <span asp-validation-for="Sqft" class="text-danger"></span>
-            </div>
-
-            <div class="col-2">
-                <label asp-for="Amenity" class="control-label pt-2" style="font-size:20px;"></label>
-            </div>
-            <div class="col-10 pb-3">
-                <textarea asp-for="Amenity" class="form-control"></textarea>
-                <span asp-validation-for="Amenity" class="text-danger"></span>
-            </div>
             <div class="col-5 offset-2">
-                <a asp-action="IndexView" asp-controller="House" class="btn-primary btn form-control ">Back to List</a>
+                <a asp-action="IndexHouseNumber" asp-controller="HouseNumber" class="btn-primary btn form-control ">Back to List</a>
             </div>
             <div class="col-5">
                 <input type="submit" value="Update" class="btn btn-success form-control" />
