--- a/HappyHouse/Views/Shared/_Layout.cshtml
+++ b/HappyHouse/Views/Shared/_Layout.cshtml
@@ -1,10 +1,13 @@
-﻿<!DOCTYPE html>
+﻿@using HappyHouse_Utility;
+@inject Microsoft.AspNetCore.Http.IHttpContextAccessor httpAcc
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - HappyHouse</title>
-    <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/css/Bootstrap.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/HappyHouse.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.3/font/bootstrap-icons.css">
@@ -29,6 +32,31 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="HouseNumber" asp-action="IndexHouseNumber">HouseNumbers</a>
                         </li>
+
+                        @if (httpAcc.HttpContext.Session.GetString(Static_Details.SessionToken) != null &&
+                            httpAcc.HttpContext.Session.GetString(Static_Details.SessionToken).ToString().Length > 0)
+                        {
+
+
+
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-controller="Auth" asp-action="LogOut">LogOut</a>
+                            </li>
+
+                        }
+                        else
+                        {
+                            
+                        
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Auth" asp-action="Login">Login</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-controller="Auth" asp-action="Register">Register</a>
+                        </li>
+
+                        }
+
                     </ul>
                 </div>
             </div>
@@ -41,8 +69,8 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2023 - HappyHouse - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+        <div class="text-center">
+            HAPPY HOUSE COMPANY
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
